--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,6 +2,8 @@ homepage: "https://www.daisycon.com"
 documentation: "https://faq-advertiser.daisycon.com/hc/en-us/articles/7046670401820"
 versions:
   # Latest version
+  - sha: 3da5dfee02bbdad411b262604c68a5166467f17d
+    changeNotes: Minor fix cookie blocking in certain sGTM contexts
   - sha: d02698ce5d2f9b861efe2512332c6ade297c3c2a
     changeNotes: Hybrid and gclid support
   - sha: e382790dfc96f0c01bbce6515298efbd7cfebfb3
